# diw-strand-metrology

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt  requirements_metrology.txt  train.py
classical_baseline/: README.md  classical_baseline.py  diw_R4_full.json  diw_R4_geom.csv  make_figure.py  method_galleries.py  otsu_gallery.py  qual_strip.py
docker/: PytorchInference.dockerfile  PytorchTraining.dockerfile  README.md  StandaloneSageMaker.dockerfile
llnl_ml/: data.py  loss.py  util.py
llnl_ml/model/: __init__.py  unet.py
notebooks/: LaunchBatchJob.ipynb  LaunchTrainingJob.ipynb  ModelEval.ipynb  PackageModel.ipynb  RunBatchInference-Copy9.ipynb  RunBatchInference.ipynb  TrainingCountExperiment-Copy22.ipynb  TrainingCountExperiment-Copy23.ipynb  TrainingCountExperiment-Copy24.ipynb  TrainingCountExperiment-Copy26.ipynb  TrainingCountExperiment.ipynb  edt_skeleton_demo.ipynb
orig/: sagemaker_estimator.py  unet_segmenter.py
src/: batch_inference_debug.py  batch_inference_template.py  inference.py  om_inference.py  requirements.txt  train.py
src/llnl_ml/: data.py  dataset.py  lightning.py  optimizer.py  sagemaker.py  util.py
src/llnl_ml/configs/: default_transforms.yaml
src/llnl_ml/data/: balanced_sampler.py  builder.py  dataset.py  exceptions.py  transforms.py  utils.py  wrappers.py
src/llnl_ml/model/: builder.py  fcn.py  mask_rcnn.py  segmentation_wrapper.py  unet.py  util.py
tests/: test_backward_compatibility.py  test_balanced_sampler.py  test_dataset_integration.py  test_transform_discovery.py
