[project]
name = "llnl_ml"
version = "0.1"
description = "LLNL Machine Learning Library"
readme = "README.md"
requires-python = ">=3.8"

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.setuptools.packages]
find = {}

[build-system]
requires = ["setuptools >= 61.0.0"]
build-backend = "setuptools.build_meta"
