[project]
name = "llnl_ml"
version = "0.2"
description = "LLNL Machine Learning Library"
readme = "README.md"
requires-python = ">=3.9"

[tool.ruff]
line-length = 120

[project.optional-dependencies]
dev = [
    "pytest",
    "hypothesis",
    "pre-commit",
]

[tool.setuptools.dynamic]
dependencies = {file = ["src/requirements.txt"]}

[tool.setuptools.packages.find]
where = ["src"]

[build-system]
requires = ["setuptools >= 61.0.0"]
build-backend = "setuptools.build_meta"
